# TradeSim

./: .gitignore  README.md  pyproject.toml  schema.excalidraw  simulation.yaml
scripts/: run_from_scratch.sh  run_simulator.sh  run_tests.sh
src/trade_simulator/: main.py
src/trade_simulator/agents/: basic_agent.py  simple_market_maker.py  single_pool_foolish_random_trader.py  single_pool_random_trader.py
src/trade_simulator/amm_agents/: basic_amm.py  mariana_amm.py  uniswap_amm.py
src/trade_simulator/order/: order.py
src/trade_simulator/pool/: pool.py
src/trade_simulator/simulation/: simulation.py
src/trade_simulator/utils/: consts.py  plots.py  utils.py
tests/: test_utils.py
