[project]
name = "tradesim"
version = "0.1.0"
description = ""
authors = [
    {name = "caesium",email = "nikiforovmusha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
packages = [
    { include = "trade_simulator", from = "src" }
]
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.0"

